feat: add Prisma schema for user authentication and content management models
feat: implement commitment scheme for private voting and auctions

feat: create selective disclosure pattern for proving properties without revealing data

docs: add security audit report template for contract audits

style: configure Tailwind CSS globals with custom theme and utility classes

test: add unit test template for Midnight contracts using Vitest

chore: configure Vitest for testing Midnight contracts and TypeScript code

ci: setup CI/CD workflow for Turborepo with build, test, and deployment steps

chore: define Turbo tasks for build, lint, test, and database operations

chore: add VSCode configuration for Next.js development tools

chore: initialize TypeScript configuration

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,14 +15,14 @@
     {
       "label": "Midnight: Compile Contracts",
       "type": "shell",
-      "command": "pnpm compact:build",
+      "command": "pnpm contract:build",
       "problemMatcher": [],
       "group": "build"
     },
     {
       "label": "Midnight: Watch Contracts",
       "type": "shell",
-      "command": "pnpm compact:watch",
+      "command": "pnpm contract:watch",
       "problemMatcher": [],
       "isBackground": true,
       "group": "build"
@@ -30,7 +30,7 @@
     {
       "label": "Midnight: Start Proof Server",
       "type": "shell",
-      "command": "docker run -p 6300:6300 --rm midnightnetwork/proof-server -- midnight-proof-server --network testnet",
+      "command": "docker run -p 6300:6300 --rm midnightnetwork/proof-server midnight-proof-server --network testnet",
       "problemMatcher": [],
       "isBackground": true,
       "group": "none",
@@ -162,9 +162,4 @@
       "group": "none"
     }
   ]
-}
-      "problemMatcher": [],
-"group": "none"
-}
-]
 }
