--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,106 +1,165 @@
 {
-  // Editor settings
-  "editor.formatOnSave": true,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit",
-    "source.organizeImports": "explicit"
-  },
-  "editor.tabSize": 2,
-  "editor.insertSpaces": true,
-  "editor.detectIndentation": false,
-  // TypeScript settings
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true,
-  "typescript.preferences.importModuleSpecifier": "relative",
-  "typescript.suggest.autoImports": true,
-  "typescript.updateImportsOnFileMove.enabled": "always",
-  // JavaScript settings
-  "javascript.preferences.importModuleSpecifier": "relative",
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  // File associations
-  "files.associations": {
-    "*.compact": "plaintext"
-  },
-  // Search exclusions
-  "search.exclude": {
-    "**/node_modules": true,
-    "**/dist": true,
-    "**/build": true,
-    "**/.next": true,
-    "**/coverage": true,
-    "**/playwright-report": true
-  },
-  // Files to exclude from explorer
-  "files.exclude": {
-    "**/.git": true,
-    "**/node_modules": true
-  },
-  // Tailwind CSS IntelliSense
-  "tailwindCSS.experimental.classRegex": [
-    [
-      "cva\\(([^)]*)\\)",
-      "[\"'`]([^\"'`]*).*?[\"'`]"
-    ],
-    [
-      "cx\\(([^)]*)\\)",
-      "(?:'|\"|`)([^']*)(?:'|\"|`)"
-    ]
-  ],
-  "tailwindCSS.includeLanguages": {
-    "typescript": "javascript",
-    "typescriptreact": "javascript"
-  },
-  // ESLint settings
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact"
-  ],
-  "eslint.workingDirectories": [
+  "version": "2.0.0",
+  "tasks": [
     {
-      "mode": "auto"
+      "label": "Midnight: Setup Environment",
+      "type": "shell",
+      "command": "bash .vscode/setup-midnight.sh",
+      "problemMatcher": [],
+      "group": "none",
+      "presentation": {
+        "reveal": "always",
+        "panel": "new"
+      }
+    },
+    {
+      "label": "Midnight: Compile Contracts",
+      "type": "shell",
+      "command": "pnpm contract:build",
+      "problemMatcher": [],
+      "group": "build"
+    },
+    {
+      "label": "Midnight: Watch Contracts",
+      "type": "shell",
+      "command": "pnpm contract:watch",
+      "problemMatcher": [],
+      "isBackground": true,
+      "group": "build"
+    },
+    {
+      "label": "Midnight: Start Proof Server",
+      "type": "shell",
+      "command": "docker run -p 6300:6300 --rm midnightnetwork/proof-server midnight-proof-server --network testnet",
+      "problemMatcher": [],
+      "isBackground": true,
+      "group": "none",
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated"
+      }
+    },
+    {
+      "label": "Midnight: Pull Proof Server Image",
+      "type": "shell",
+      "command": "docker pull midnightnetwork/proof-server",
+      "problemMatcher": [],
+      "group": "none"
+    },
+    {
+      "label": "Midnight: Check Proof Server Health",
+      "type": "shell",
+      "command": "curl -s http://localhost:6300/health || echo 'Proof server not running'",
+      "problemMatcher": [],
+      "group": "none"
+    },
+    {
+      "label": "dev",
+      "type": "shell",
+      "command": "pnpm dev",
+      "problemMatcher": [],
+      "isBackground": true,
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
+    },
+    {
+      "label": "build",
+      "type": "shell",
+      "command": "pnpm build",
+      "problemMatcher": [
+        "$tsc"
+      ],
+      "group": "build"
+    },
+    {
+      "label": "lint",
+      "type": "shell",
+      "command": "pnpm lint",
+      "problemMatcher": [
+        "$eslint-stylish"
+      ],
+      "group": "test"
+    },
+    {
+      "label": "lint:fix",
+      "type": "shell",
+      "command": "pnpm lint --fix",
+      "problemMatcher": [
+        "$eslint-stylish"
+      ],
+      "group": "test"
+    },
+    {
+      "label": "typecheck",
+      "type": "shell",
+      "command": "pnpm typecheck",
+      "problemMatcher": [
+        "$tsc"
+      ],
+      "group": "test"
+    },
+    {
+      "label": "test",
+      "type": "shell",
+      "command": "pnpm test",
+      "problemMatcher": [],
+      "group": {
+        "kind": "test",
+        "isDefault": true
+      }
+    },
+    {
+      "label": "test:watch",
+      "type": "shell",
+      "command": "pnpm test:watch",
+      "problemMatcher": [],
+      "isBackground": true,
+      "group": "test"
+    },
+    {
+      "label": "test:coverage",
+      "type": "shell",
+      "command": "pnpm test:coverage",
+      "problemMatcher": [],
+      "group": "test"
+    },
+    {
+      "label": "prisma:generate",
+      "type": "shell",
+      "command": "pnpm prisma generate",
+      "problemMatcher": [],
+      "group": "build"
+    },
+    {
+      "label": "prisma:push",
+      "type": "shell",
+      "command": "pnpm prisma db push",
+      "problemMatcher": [],
+      "group": "build"
+    },
+    {
+      "label": "prisma:studio",
+      "type": "shell",
+      "command": "pnpm prisma studio",
+      "problemMatcher": [],
+      "isBackground": true,
+      "group": "none"
+    },
+    {
+      "label": "clean",
+      "type": "shell",
+      "command": "rm -rf node_modules/.cache dist .next coverage playwright-report",
+      "problemMatcher": [],
+      "group": "none"
+    },
+    {
+      "label": "install",
+      "type": "shell",
+      "command": "pnpm install",
+      "problemMatcher": [],
+      "group": "none"
     }
-  ],
-  // Language-specific settings
-  "[typescript]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
-  },
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
-  },
-  "[javascript]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
-  },
-  "[javascriptreact]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
-  },
-  "[json]": {
-    "editor.defaultFormatter": "vscode.json-language-features"
-  },
-  "[jsonc]": {
-    "editor.defaultFormatter": "vscode.json-language-features"
-  },
-  "[markdown]": {
-    "editor.defaultFormatter": "vscode.markdown-language-features",
-    "editor.wordWrap": "on"
-  },
-  "[css]": {
-    "editor.defaultFormatter": "vscode.css-language-features"
-  },
-  "[html]": {
-    "editor.defaultFormatter": "vscode.html-language-features"
-  },
-  // Compact language settings (Midnight)
-  "[plaintext]": {
-    "editor.tabSize": 2,
-    "editor.insertSpaces": true
-  },
-  // Testing
-  "testing.automaticallyOpenPeekView": "failureInVisibleDocument",
-  // Terminal
-  "terminal.integrated.defaultProfile.linux": "bash",
-  // Git settings
-  "git.enableSmartCommit": true,
-  "git.confirmSync": false
+  ]
 }
