--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -161,5 +161,7 @@
       "problemMatcher": [],
       "group": "none"
     }
-  ]
+  ],
+  "chat.useClaudeSkills": true,
+  "chat.useNestedAgentsMdFiles": true
 }
