--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
+  "files": [],
   "compilerOptions": {
     "target": "ES2022",
     "lib": [
