--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:md:all:fix": "markdownlint-cli2 --fix \".github/**/*.md\""
   },
   "devDependencies": {
-    "markdownlint-cli2": "^0.20.0"
+    "markdownlint-cli2": "^0.20.0",
+    "typescript": "5.6.3"
   }
 }
