Refactor code structure and remove redundant code blocks for improved readability and maintainability

--- a/.github/skills/turborepo/assets/turbo.json
+++ b/.github/skills/turborepo/assets/turbo.json
@@ -3,91 +3,46 @@
   "ui": "tui",
   "tasks": {
     "build": {
-      "dependsOn": [
-        "^build"
-      ],
-      "inputs": [
-        "$TURBO_DEFAULT$",
-        ".env",
-        ".env.local",
-        ".env.production"
-      ],
-      "outputs": [
-        ".next/**",
-        "!.next/cache/**",
-        "dist/**"
-      ],
-      "env": [
-        "NODE_ENV",
-        "DATABASE_URL",
-        "NEXT_PUBLIC_*"
-      ]
+      "dependsOn": ["^build"],
+      "inputs": ["$TURBO_DEFAULT$", ".env", ".env.local", ".env.production"],
+      "outputs": [".next/**", "!.next/cache/**", "dist/**"],
+      "env": ["NODE_ENV", "DATABASE_URL", "NEXT_PUBLIC_*"]
     },
     "dev": {
-      "dependsOn": [
-        "^build"
-      ],
+      "dependsOn": ["^build"],
       "cache": false,
       "persistent": true
     },
     "lint": {
-      "dependsOn": [
-        "^build"
-      ],
-      "inputs": [
-        "$TURBO_DEFAULT$",
-        "eslint.config.*",
-        ".eslintrc*"
-      ],
+      "dependsOn": ["^build"],
+      "inputs": ["$TURBO_DEFAULT$", "eslint.config.*", ".eslintrc*"],
       "outputs": []
     },
     "lint:fix": {
-      "dependsOn": [
-        "^build"
-      ],
+      "dependsOn": ["^build"],
       "cache": false
     },
     "test": {
-      "dependsOn": [
-        "^build"
-      ],
-      "inputs": [
-        "$TURBO_DEFAULT$",
-        "vitest.config.*",
-        "jest.config.*"
-      ],
-      "outputs": [
-        "coverage/**"
-      ],
-      "env": [
-        "CI",
-        "NODE_ENV"
-      ]
+      "dependsOn": ["^build"],
+      "inputs": ["$TURBO_DEFAULT$", "vitest.config.*", "jest.config.*"],
+      "outputs": ["coverage/**"],
+      "env": ["CI", "NODE_ENV"]
     },
     "test:watch": {
       "cache": false,
       "persistent": true
     },
     "typecheck": {
-      "dependsOn": [
-        "^build"
-      ],
-      "inputs": [
-        "$TURBO_DEFAULT$",
-        "tsconfig.json"
-      ],
+      "dependsOn": ["^build"],
+      "inputs": ["$TURBO_DEFAULT$", "tsconfig.json"],
       "outputs": []
     },
     "clean": {
       "cache": false
     },
     "db:generate": {
-      "inputs": [
-        "prisma/schema.prisma"
-      ],
-      "outputs": [
-        "node_modules/.prisma/**"
-      ],
+      "inputs": ["prisma/schema.prisma"],
+      "outputs": ["node_modules/.prisma/**"],
       "cache": false
     },
     "db:push": {
@@ -95,19 +50,9 @@
     },
     "db:migrate": {
       "cache": false,
-      "dependsOn": [
-        "db:generate"
-      ]
+      "dependsOn": ["db:generate"]
     }
   },
-  "globalEnv": [
-    "CI",
-    "VERCEL",
-    "VERCEL_ENV",
-    "VERCEL_URL"
-  ],
-  "globalPassThroughEnv": [
-    "AWS_*",
-    "GITHUB_*"
-  ]
+  "globalEnv": ["CI", "VERCEL", "VERCEL_ENV", "VERCEL_URL"],
+  "globalPassThroughEnv": ["AWS_*", "GITHUB_*"]
 }
